Add a clear error when CQL refers to the wrong type (ex FHIR.Code).